# sfmc-migrate

./: .env.example  .gitignore  hello.py  pg_to_clickhouse.py  pyproject.toml
docs/: python_clickhouse_connect.md
